[gd_scene load_steps=2 format=3 uid="uid://d0k2bb5axx4xk"]

[ext_resource type="Script" path="res://Scripts/audio_players.gd" id="1_ktl3y"]

[node name="AudioPlayers" type="Node"]
script = ExtResource("1_ktl3y")

[node name="MasterPlayer" type="AudioStreamPlayer" parent="."]

[node name="MasterOneStem" type="AudioStreamPlayer" parent="."]
bus = &"Master (One Stem)"

[node name="StemPlayerOne" type="AudioStreamPlayer" parent="."]
bus = &"Stem 1"

[node name="StemPlayerTwo" type="AudioStreamPlayer" parent="."]
bus = &"Stem 2"

[node name="StemPlayerThree" type="AudioStreamPlayer" parent="."]
bus = &"Stem 3"

[node name="StemPlayerFour" type="AudioStreamPlayer" parent="."]
bus = &"Stem 4"

[node name="SpectrumData" type="AudioStreamPlayer" parent="."]
bus = &"SpectrumData"

[connection signal="finished" from="MasterPlayer" to="." method="_on_master_player_finished"]
